Fix dark mode images

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,10 @@ u {
     display: block;
 }
 
+.shadow {
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
 .logo {
     filter: saturate(0%);
     transition: filter 0.2s ease-in-out;
@@ -114,6 +118,10 @@ u {
     transition: opacity 0.2s ease-in-out;
     -moz-transition: opacity 0.2s ease-in-out;
     -webkit-transition: opacity 0.2s ease-in-out;
+}
+
+.toggle {
+    cursor: pointer;
 }
 
 .section-header {
@@ -250,6 +258,10 @@ u {
         text-decoration-color: #666;
     }
 
+    .shadow {
+        box-shadow: 0 4px 12px rgba(255, 255, 255, 0.1);
+    }
+
     .tip {
         color: rgba(255, 255, 255, 0.7);
     }
@@ -283,18 +295,37 @@ u {
         border-color: #666;
     }
 
-    .projects img {
+    .projects img,
+    .responsive-iframe {
         border-color: #444;
     }
 
-    .logo,
-    .logo2 {
+    .invert {
         filter: brightness(0) invert(1);
+        transition: filter 0.2s ease-in-out;
+        -moz-transition: filter 0.2s ease-in-out;
+        -webkit-transition: filter 0.2s ease-in-out;
     }
 
-    .logo:hover,
-    .logo2:hover {
-        filter: brightness(1.1) saturate(100%);
+    .invert:hover {
+        filter: brightness(1) invert(0);
+        transition: filter 0.2s ease-in-out;
+        -moz-transition: filter 0.2s ease-in-out;
+        -webkit-transition: filter 0.2s ease-in-out;
+    }
+
+    .contrast {
+        filter: saturate(0%) contrast(150%);
+        transition: filter 0.2s ease-in-out;
+        -moz-transition: filter 0.2s ease-in-out;
+        -webkit-transition: filter 0.2s ease-in-out;
+    }
+
+    .contrast:hover {
+        filter: saturate(100%) contrast(100%);
+        transition: filter 0.2s ease-in-out;
+        -moz-transition: filter 0.2s ease-in-out;
+        -webkit-transition: filter 0.2s ease-in-out;
     }
 
     .club {
@@ -315,6 +346,10 @@ body.dark-mode hr {
 
 body.dark-mode u {
     text-decoration-color: #666;
+}
+
+body.dark-mode .shadow {
+    box-shadow: 0 4px 12px rgba(255, 255, 255, 0.1);
 }
 
 body.dark-mode .section-header,
@@ -343,18 +378,9 @@ body.dark-mode .tooltip .tooltiptext {
     border-color: #666;
 }
 
-body.dark-mode .projects img {
+body.dark-mode .projects img,
+body.dark-mode .responsive-iframe {
     border-color: #444;
-}
-
-body.dark-mode .logo,
-body.dark-mode .logo2 {
-  filter: brightness(0) invert(1);
-}
-
-body.dark-mode .logo:hover,
-body.dark-mode .logo2:hover {
-    filter: brightness(1.1) saturate(100%);
 }
 
 body.dark-mode .tip {
@@ -379,6 +405,10 @@ body:not(.dark-mode) hr {
 
 body:not(.dark-mode) u {
     text-decoration-color: #ccc;
+}
+
+body:not(.dark-mode) .shadow {
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 body:not(.dark-mode) .tooltip .tooltiptext {
@@ -723,6 +753,27 @@ ul {
     justify-content: center;
     margin-top: 32px;
     margin-bottom: 32px;
+}
+
+.responsive-iframe {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    border-radius: 3%;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+}
+
+.responsive-iframe iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
 
 /* Footer */
